--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
         <h1>Amazeriffic</h1>
         <nav>
             <a href="#">Регистрация</a>
-            <a href="#">ВиО</a>
+            <a href="faq.html">ВиО</a>
             <a href="#">Техподдержка</a>
         </nav>
     </header>
