--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8" />
+    <link href="styles/reset.css" rel="stylesheet" type="text/css" />
+    <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <title>Amazeriffic</title>
-    <link rel="stylesheet" type="text\css" href="styles\reset.css">
-    <link rel="stylesheet" type="text\css" href="styles\style.css">
-
 </head>
 
 <body>
@@ -20,33 +20,47 @@
         </div>
     </header>
     <main>
-        <h2>Amazeriffic изменит вашу жизнь!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <h3>Почему вам нужен Amazeriffic?</h3>
-        <ul>
-            <li>Он легко впишется в вашу жизнь</li>
-            <li>Он классный</li>
-            <li>Он перевернет ваш мир</li>
-        </ul>
-        <img src="lightbulb.png" alt="изображение лампочки">
+        <div class="container">
+            <div class="main-left">
+                <h2>Amazeriffic изменит вашу жизнь!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                <h3>Почему вам нужен Amazeriffic?</h3>
+                <ul>
+                    <li>Он легко впишется в вашу жизнь</li>
+                    <li>Он классный</li>
+                    <li>Он перевернет ваш мир</li>
+                </ul>
+            </div>
+        </div>
+        <div class="lightbulb">
+            <img src="lightbulb.png" alt="изображение лампочки">
+        </div>
     </main>
     <footer>
-        <div class="contact">
-            <h5>Свяжитесь с нами</h5>
-            <p>Amazeriffic!</p>
-            <p>555 50-я улица</p>
-            <p>Татарстан, Казань 28801</p>
-        </div>
-        <div class="sitemap">
-            <h5>Карта сайта</h5>
-            <ul>
-                <li><a href="#">Домой</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Право</a></li>
-                <li><a href="#">Техподдержка</a></li>
-                <li><a href="#">ВиО</a></li>
-                <li><a href="#">Вакансии</a></li>
-            </ul>
+        <div class="container">
+            <div class="contact">
+                <h5>Свяжитесь с нами</h5>
+                <p>Amazeriffic!</p>
+                <p>555 50-я улица</p>
+                <p>Татарстан, Казань 28801</p>
+            </div>
+            <div class="sitemap">
+                <h5>Карта сайта</h5>
+                <div class="mapleft">
+                    <ul>
+                        <li><a href="#">Домой</a></li>
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">Право</a></li>
+                    </ul>
+                </div>
+                <div class="mapright">
+                    <ul>
+                        <li><a href="#">Техподдержка</a></li>
+                        <li><a href="#">ВиО</a></li>
+                        <li><a href="#">Вакансии</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
