--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8" />
     <link href="styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css' />
     <title>Amazeriffic</title>
 </head>
 
