--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,12 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css' />
+
     <title>Amazeriffic</title>
 </head>
 
 <body>
+
     <header>
         <div class="container">
             <h1>Amazeriffic</h1>
@@ -23,19 +25,14 @@
     </header>
     <main>
         <div class="container">
-            <div class="main-left">
-                <h2>Amazeriffic изменит вашу жизнь!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                <h3>Почему вам нужен Amazeriffic?</h3>
-                <ul>
-                    <li>Он легко впишется в вашу жизнь</li>
-                    <li>Он классный</li>
-                    <li>Он перевернет ваш мир</li>
-                </ul>
+            <div class="tabs">
+                <a href="#"><span class="active">Новые</span></a>
+                <a href="#"><span>Старые</span></a>
+                <a href="#"><span>Добавить</span></a>
             </div>
-        </div>
-        <div class="lightbulb">
-            <img src="lightbulb.png" alt="изображение лампочки">
+            <div class="content">
+
+            </div>
         </div>
     </main>
     <footer>
@@ -65,6 +62,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
