--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
+    <title> Amazeriffic </title>
     <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8" />
     <link href="styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css' />
-
-    <title>Amazeriffic</title>
 </head>
 
 <body>
-
     <header>
         <div class="container">
-            <h1>Amazeriffic</h1>
+            <a class="title" href="index.html">Amazeriffic</a>
             <nav>
                 <a href="index.html">Регистрация</a>
                 <a href="faq.html">ВиО</a>
@@ -31,13 +29,13 @@
     <footer>
         <div class="container">
             <div class="contact">
-                <h5>Свяжитесь с нами</h5>
+                <p>Свяжитесь с нами</p>
                 <p>Amazeriffic!</p>
                 <p>555 50-я улица</p>
                 <p>Татарстан, Казань 28801</p>
             </div>
             <div class="sitemap">
-                <h5>Карта сайта</h5>
+                <h5>Карта сайта</h5>
                 <div class="mapleft">
                     <ul>
                         <li><a href="index.html">Домой</a></li>
