--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <a class="title" href="index.html">Amazeriffic</a>
+            <h1>Amazeriffic</h1>
             <nav>
                 <a href="index.html">Регистрация</a>
                 <a href="index.html">Вход</a>
