--- a/client/task.html
+++ b/client/task.html
@@ -6,6 +6,7 @@
     <title> Amazeriffic </title>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/task.js"></script>
+    <link href="styles/style.css" rel="stylesheet" type="text/css" />
     </style>
 </head>
 
@@ -23,8 +24,3 @@
 </body>
 
 </html>
-
-
-<body>
-    <div class="message"></div>
-</body>
